--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>Nosotros</li>
+            <li>Producto</li>
+            <li>Servicios</li>
+        </ul>
+    </nav>
 </body>
 </html>
